--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A module for managing authorization in your nest application, using casl.",
   "license": "MIT",
   "author": "GerkinDev",
+  "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
     "build:watch": "npm run build -- --watch",
     "format:pkg": "format-package --write",
     "lint": "eslint \"{,{src,apps,libs,test}/**/}*.{j,t}s\"",
+    "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "npm run lint && npm run test && npm run build",
     "prepare": "rm -rf dist && npm run build",
@@ -49,12 +51,19 @@
     }
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.0"
+    "@casl/ability": "^5.0.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
+    "@casl/ability": "^5.1.2",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@nestjs/cli": "^7.5.1",
+    "@nestjs/common": "^7.5.1",
+    "@nestjs/core": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@scitizen/eslint-config": "^1.1.1",
@@ -76,6 +85,8 @@
     "format-package": "^6.1.0",
     "husky": "^4.3.7",
     "jest": "^26.6.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.6.3",
     "standard-version": "^9.1.0",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
