--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@scitizen/nest-cast",
+  "name": "@scitizen/nest-casl",
   "version": "0.0.1",
   "description": "A module for managing authorization in your nest application, using casl.",
   "license": "MIT",
+  "engines": {
+    "node": ">= 15.0.0"
+  },
   "author": "GerkinDev",
   "main": "dist/index.js",
   "scripts": {
@@ -10,90 +13,72 @@
     "build": "nest build",
     "build:watch": "npm run build -- --watch",
     "format:pkg": "format-package --write",
-    "lint": "eslint \"{,{src,apps,libs,test}/**/}*.{j,t}s\"",
+    "lint": "eslint \"{,{src,libs,test}/**/}*.{j,t}s\"",
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
-    "precommit": "npm run lint && npm run test && npm run build",
-    "prepare": "rm -rf dist && npm run build",
+    "precommit": "npm run lint && npm run test && npm run test:e2e && npm run build",
+    "prepare": "husky install",
+    "postinstall": "npm run postinstall:jest-extended",
+    "postinstall:jest-extended": "cd node_modules/jest-extended && npm i --production --ignore-scripts",
     "release": "standard-version",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./jest.config.e2e.js",
     "test:watch": "jest --watch"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "npm run lint:commit-message:current",
-      "pre-commit": "npm run precommit"
-    }
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testEnvironment": "node",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    }
-  },
   "peerDependencies": {
     "@casl/ability": "^5.0.0",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "lodash": "^4.17.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.0.0"
+    "rxjs": "^7.0.0"
   },
   "devDependencies": {
-    "@casl/ability": "^5.1.2",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@scitizen/eslint-config": "^1.1.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
+    "@casl/ability": "^5.4.3",
+    "@commitlint/cli": "^13.2.0",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@nestjs/cli": "^8.1.2",
+    "@nestjs/common": "^8.0.9",
+    "@nestjs/core": "^8.0.9",
+    "@nestjs/platform-express": "^8.0.9",
+    "@nestjs/schematics": "^8.0.3",
+    "@nestjs/testing": "^8.0.9",
+    "@scitizen/eslint-config": "^1.5.1",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.175",
+    "@types/node": "^16.10.2",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.12.0",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^31.0.2",
-    "eslint-plugin-prefer-arrow": "^1.2.2",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-rxjs": "^2.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsdoc": "^36.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-rxjs": "^3.3.7",
     "eslint-plugin-sort-export-all": "^1.1.1",
     "format-package": "^6.1.0",
-    "husky": "^4.3.7",
-    "jest": "^26.6.3",
+    "husky": "^7.0.2",
+    "jest": "^27.2.4",
+    "jest-extended": "github:GerkinDev/jest-extended#build/rejects-toThrowWithMessage",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.3",
-    "standard-version": "^9.1.0",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
+    "rxjs": "^7.3.1",
+    "standard-version": "^9.3.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1",
+    "tsconfig-paths": "^3.11.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.5"
+    "typescript": "^4.4.3"
   }
 }
