--- a/tsconfig.e2e-spec.json
+++ b/tsconfig.e2e-spec.json
@@ -1,5 +1,5 @@
 {
     "extends": "./tsconfig.spec.json",
     "include": ["./test/**/*", "./src/**/*"],
-    "exclude": ["node_modules", "./src/**/*.spec.ts"]
+    "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
