--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@nestjs/cli": "^8.1.2",
     "@nestjs/common": "^8.0.9",
     "@nestjs/core": "^8.0.9",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.9",
     "@nestjs/schematics": "^8.0.3",
     "@nestjs/testing": "^8.0.9",
@@ -56,6 +58,7 @@
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.2",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.32.0",
@@ -66,11 +69,15 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-rxjs": "^3.3.7",
     "eslint-plugin-sort-export-all": "^1.1.1",
+    "expect-type": "^0.12.0",
+    "express": "^4.17.1",
     "format-package": "^6.1.0",
     "husky": "^7.0.2",
     "jest": "^27.2.4",
     "jest-extended": "github:GerkinDev/jest-extended#build/rejects-toThrowWithMessage",
     "lodash": "^4.17.21",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.3.1",
     "standard-version": "^9.3.1",
@@ -81,7 +88,7 @@
     "tsconfig-paths": "^3.11.0",
     "tslint": "^6.1.3",
     "typedoc": "^0.21.9",
-    "typedoc-plugin-pages": "^1.1.0",
+    "typedoc-plugin-pages-fork": "^0.0.1",
     "typescript": "^4.4.3"
   }
 }
