build: fix tsbuildinfos path that caused re-build to not re-create files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "incremental": true,
+    "tsBuildInfoFile": "./dist/.tsbuildinfo",
     "moduleResolution": "node",
     "composite": true,
     "outDir": "./dist",
