--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -1,7 +1,8 @@
 {
-  "extends": "./tsconfig.src.json",
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-      "composite": false
+      "rootDir": "./src",
+      "outDir": "./dist"
   },
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
