refactor: normalize config files, go strict

--- a/tsconfig.e2e-spec.json
+++ b/tsconfig.e2e-spec.json
@@ -1,5 +1,12 @@
 {
+    "exclude": [
+        "node_modules",
+        "dist",
+        "**/*.spec.ts"
+    ],
     "extends": "./tsconfig.spec.json",
-    "include": ["./test/**/*", "./src/**/*"],
-    "exclude": ["node_modules", "dist", "**/*.spec.ts"]
+    "include": [
+        "./test/**/*",
+        "./src/**/*"
+    ]
 }
