--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,12 @@
 {
-  "extends": "./tsconfig.src.json",
   "compilerOptions": {
-      "composite": false
+    "composite": false
   },
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist",
+    "**/*spec.ts"
+  ],
+  "extends": "./tsconfig.src.json"
 }
