--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,14 +1,22 @@
 {
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "paths": {
+      "@scitizen/nest-casl": [
+        "./src/index.ts"
+      ]
+    },
     "types": [
       "jest",
       "jest-extended"
-    ],
-    "paths": {
-        "@scitizen/nest-casl": ["./src/index.ts"]
-    }
+    ]
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules", "test", "dist"]
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist"
+  ],
+  "extends": "./tsconfig.base.json",
+  "include": [
+    "./src/**/*"
+  ]
 }
