--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -1,8 +1,13 @@
 {
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-      "rootDir": "./src",
-      "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist",
+    "**/*spec.ts"
+  ],
+  "extends": "./tsconfig.base.json"
 }
