--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:watch": "npm run build -- --watch",
     "doc": "typedoc",
     "format:pkg": "format-package --write",
-    "lint": "eslint \"{,{src,libs,test}/**/}*.{j,t}s\"",
+    "lint": "eslint \"{,{src,test}/**/}*.{j,t}s\"",
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
     "postinstall": "npm run postinstall:jest-extended",
@@ -58,11 +58,11 @@
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.10.2",
     "@types/passport-jwt": "^3.0.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsdoc": "^36.1.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -85,7 +85,6 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
-    "tslint": "^6.1.3",
     "typedoc": "^0.21.9",
     "typedoc-plugin-pages-fork": "^0.0.1",
     "typescript": "^4.4.3"
