--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scitizen/nest-casl",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha1",
   "description": "A module for managing authorization in your nest application, using casl.",
   "license": "MIT",
   "engines": {
@@ -12,20 +12,20 @@
     "build": "nest build",
     "build:watch": "npm run build -- --watch",
     "doc": "typedoc",
+    "doc:for-current-version": "npm run doc -- --gitRevision v$(node -e \"console.log(require('./package.json').version)\")",
     "format:pkg": "format-package --write",
     "lint": "eslint \"{,{src,test}/**/}*.{j,t}s\"",
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
     "lint:fix": "npm run lint -- --fix",
     "postinstall": "npm run postinstall:jest-extended",
     "postinstall:jest-extended": "cd node_modules/jest-extended && npm i --production --ignore-scripts",
-    "precommit": "npm run lint && npm run test && npm run test:e2e && npm run build && npm run doc",
+    "precommit": "npm run lint && npm run test:unit && npm run test:e2e && npm run build && npm run doc",
     "prepare": "husky install",
     "release": "standard-version",
-    "test": "jest",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./jest.config.e2e.js",
-    "test:watch": "jest --watch"
+    "test:unit": "jest --config ./jest.config.js",
+    "test:unit:ci": "npm run test:unit -- --all --ci --reporters=default --reporters=jest-junit",
+    "test:unit:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --config ./jest.config.js -- ",
+    "test:e2e": "jest --config ./jest.config.e2e.js"
   },
   "commitlint": {
     "extends": [
@@ -74,6 +74,7 @@
     "husky": "^7.0.2",
     "jest": "^27.2.4",
     "jest-extended": "github:GerkinDev/jest-extended#build/rejects-toThrowWithMessage",
+    "jest-junit": "^13.0.0",
     "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
