--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
       "@commitlint/config-conventional"
     ]
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "peerDependencies": {
     "@casl/ability": "^5.0.0",
     "@nestjs/common": "^8.0.0",
