ci(release): trigger v0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -165,7 +165,7 @@ workflows:
       - Confirm new release:
           type: approval
           requires:
-            - Check files
+            - check-releaseable
 
       - docs:
           requires:
