ci(release): trigger v0.0.1

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:watch": "npm run build -- --watch",
     "ci:get-target-release-version": "sh ./.circleci/extract-release-version.sh",
     "doc": "typedoc",
-    "doc:for-current-version": "npm run doc -- --gitRevision v$(npm run ci:get-target-release-version)",
+    "doc:for-current-version": "npm run doc -- --gitRevision v$(npm run --silent ci:get-target-release-version)",
     "format:pkg": "format-package --write",
     "lint": "eslint \"{,{src,test}/**/}*.{j,t}s\"",
     "lint:commit-message:current": "commitlint -E HUSKY_GIT_PARAMS",
@@ -22,7 +22,6 @@
     "postinstall:jest-extended": "cd node_modules/jest-extended && npm i --production --ignore-scripts",
     "precommit": "npm run lint && npm run test:unit && npm run test:e2e && npm run build && npm run doc",
     "prepare": "husky install",
-    "release:commit": "git commit --allow-empty -m \"ci(release): trigger v$(conventional-recommended-bump)\"",
     "release:do": "standard-version",
     "release:ci": "./.circleci/release.sh",
     "test:unit": "jest --config ./jest.config.js",
@@ -69,7 +68,6 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "conventional-recommended-bump": "^6.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.24.2",
